# fitbit_data_viewer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
.idx/: dev.nix
docs/: tools.md
notebooks/: .env.example  fitbit-eda.ipynb  fitbit-weight-eda.ipynb
src/: fitbit_extract.py
src/fitbit_data_analysis/: __init__.py
src/fitbit_data_viewer/: __init__.py
tests/: test_fitbit_extract.py  test_weight.py
tests/test_data/extractable_data/: heart_rate-2024-09-06.json  weight-2024-07-20.json  weight-2024-08-19.json
