[project]
name = "fitbit-dashboard"
version = "0.1.0"
description = "Applications for extracting and displaying Fitbit data, providing views that are not available in the standard phone app."
authors = [
    { name="Jim Tyhurst", email="jim@tyhurst.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["fitbit", "health", "tracking"]
dependencies = [
    "polars>=1.12.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
"Source" = "https://github.com/jimtyhurst/fitbit-dashboard.git"
"Bug Tracker" = "https://github.com/jimtyhurst/fitbit-dashboard/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
