[project]
name = "fitbit_data_viewer"
version = "0.1.0"
description = "Applications for extracting and displaying Fitbit data, providing views that are not available in the standard phone app."
authors = [
    { name="Jim Tyhurst", email="jim@tyhurst.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["fitbit", "health", "tracking"]
dependencies = [
    "matplotlib>=3.10.0",
    "polars>=1.17.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
"Source" = "https://github.com/jimtyhurst/fitbit_data_viewer.git"
"Bug Tracker" = "https://github.com/jimtyhurst/fitbit_data_viewer/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
